fix uneven cells bug

--- a/src/styles/Maze.css
+++ b/src/styles/Maze.css
@@ -1,13 +1,3 @@
-/* .cell {
-  height: 20px;
-  width: 20px;
-} */
-
-.table {
-  width: 500px;
-  height: 500px;
-}
-
 .topWall {
   border-top: 1px solid #000;
 }
@@ -27,16 +17,19 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  padding: 0;
+  margin: 0;
+  background: skyblue;
 }
 
-.player div div {
+.player div {
   height: 65%;
   width: 65%;
   background: red;
   border-radius: 50%;
 }
 
-.destination div div {
+.destination div {
   width: 75%;
   height: 75%;
   border-radius: 50%;
